// 用户领域服务
syntax = "proto3";
// app.server
package user.user_server_domain;

option java_multiple_files = true;
option java_package = "com.seezoon.protocol.user.server.domain";
import "validate/validate.proto";

// 注册
message MobileRegisterCmd {
  int64 uid = 1 [(validate.rules).int64.gt = 0];
  string mobile = 2 [(validate.rules).string = {min_len: 8, max_len: 20}];
  string code = 3 [(validate.rules).string.len = 6];
}

