// 用户领域服务
syntax = "proto3";
// app.server
package user.user_server_domain;

option java_multiple_files = true;
option java_package = "com.seezoon.user.server.domain.stub";
import 'dto/mobile_register.proto';

// 用户账号服务，登录，注册，找回密码等需要重新路由的服务
service UserAccountService {
  rpc MobileRegister(MobileRegisterReq) returns(MobileRegisterResp) {};
}
